# yubikey-ssh-manager

./: .gitignore  LICENSE.md  README.md  Yubikey SSH Manager.dmg  app.py  create_dmg.sh  install.sh  pyproject.toml  requirements.txt  setup.py  ssh_manager.py  test_server.py
application/: __init__.py  logger.py  mac_trayicon.py  ssh_manager.py
backend/: __init__.py  routes.py
frontend/: package.json  setup.sh  tailwind.config.js
frontend/static/css/: input.css  main.css
frontend/static/js/: main.js
frontend/templates/: index.html
static/js/: main.js
templates/: index.html
