[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yubikey-ssh-manager"
version = "1.0.0"
authors = [
    { name = "Robert Herbaugh" },
]
description = "A macOS menu bar application for managing SSH keys with Yubikey"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask==2.3.3",
    "rumps==0.4.0",
    "yubikey-manager==5.1.1",
    "paramiko==3.3.1",
    "cryptography==41.0.3",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "flask-socketio==5.3.6",
    "eventlet==0.33.3",
    "flask-cors==4.0.0",
]

[project.scripts]
yubikey-ssh-manager = "app:main"

[tool.setuptools]
packages = ["yubikey_ssh_manager"]
